[STYLE] Generic styles update #master

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -21,7 +21,7 @@ $chips-background: #a0a0a0;
 $chips-expanded-background: #b71a73;
 $list-box-border: #b71a73;
 $list-box-search-border: rgb(211, 211, 211);
-$list-box-text: rgb(123, 123, 123);
+$list-box-text: #333;
 $list-box-search-placeholder-text: rgb(217, 217, 217);
 $list-box-filter-label-text: #b71a73;
 // CHECKBOX:
