--- a/src/app/shared/components/list-box/list-box.component.scss
+++ b/src/app/shared/components/list-box/list-box.component.scss
@@ -7,12 +7,12 @@
     flex-wrap: wrap;
     justify-content: center;
     border: 1px solid $list-box-border;
-    width: 300px;
+    width: 100%;
     max-height: 265px;
     font-size: 14px !important;
     color: $list-box-text;
     .search {
-        width: 255px;
+        width: 95%;
         height: 28px;
         margin-top: 15px;
         padding-left: 10px;
