[STYLE] Generic style update #master

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -82,3 +82,6 @@ $generic-form-border: #b4b4b4;
 $generic-form-border-disabled: #b4b4b4;
 $generic-form-error-background: #ffe9f2;
 $generic-form-error-border: #fe74a2;
+//NG SELECT
+$ngselect-border-color: #b71a73;
+$ngselect-arrow-color: #b71a73;
