--- a/src/styles/_selects.scss
+++ b/src/styles/_selects.scss
@@ -74,7 +74,7 @@
     .ng-select.ng-select-single .ng-select-container {
         height: 30px;
         border-radius: 3px;
-        border: 1px solid $green;
+        border: 1px solid $ngselect-border-color;
     }
 
     .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
@@ -272,7 +272,7 @@
     }
 
     .ng-select .ng-arrow-wrapper .ng-arrow {
-        border-color: $green transparent transparent;
+        border-color: $ngselect-arrow-color transparent transparent;
         border-style: solid;
         border-width: 5px 5px 2.5px;
     }
