--- a/src/app/shared/components/chips/chips.component.scss
+++ b/src/app/shared/components/chips/chips.component.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    width: 296px;
+    width: 100%;
     height: 28px;
     font-size: 14px;
     border-radius: 15px;
