--- a/src/app/shared/components/list-box/list-box.component.scss
+++ b/src/app/shared/components/list-box/list-box.component.scss
@@ -26,7 +26,7 @@
         list-style-type: none;
         padding: 0;
         margin-top: 6px;
-        width: 255px;
+        width: 100%;
         max-height: 200px;
         li {
             display: flex;
@@ -39,7 +39,6 @@
                 white-space: nowrap;
                 margin-left: 8px;
                 margin-right: 8px;
-                max-width: 187px;
             }
             .count {
                 margin-right: 12px;
