--- a/src/app/shared/components/period-filter/period-filter.component.scss
+++ b/src/app/shared/components/period-filter/period-filter.component.scss
@@ -2,7 +2,8 @@
 @import "fonts.scss";
 
 .container {
-    width: 300px;
+    width: 100%;
+
     .header {
         display: flex;
         flex-direction: row;
@@ -11,8 +12,7 @@
         height: 60px;
 
         img {
-            margin-left: -4px;
-            margin-right: 5px;
+            margin: 0 5px 0 0;
         }
 
         h4 {
@@ -21,30 +21,31 @@
         }
     }
 
-    .content {
-        .period-container {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 15px;
-            label {
-                font-size: 13px;
-                font-family: $worksans-medium;
-                margin-bottom: 10px;
-            }
+    .period-container {
+        display: flex;
+        flex-direction: column;
 
-            .control {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                input {
-                    @extend %generic-input;
-                    width: 45%;
-                    height: 33px;
-                    color: #c3c3c3;
-                    border: 2px solid #c3c3c3;
-                    text-align: center;
-                    text-align-last: center;
-                }
+        label {
+            font-size: 0.8rem;
+            font-family: $worksans-medium;
+            padding: 5px 0;
+        }
+
+        .control {
+            width: calc(100% - 10px);
+            height: 30px;
+            display: grid;
+            grid-template-columns: repeat(2, 50%);
+            column-gap: 15px;
+
+            input {
+                @extend %input-date-content;
+                width: 100%;
+                color: #c3c3c3;
+                border: 1px solid #c3c3c3;
+                border-radius: 4px;
+                text-align: center;
+                text-align-last: center;
             }
         }
     }
