--- a/src/app/root/components/header/header.component.html
+++ b/src/app/root/components/header/header.component.html
@@ -5,7 +5,7 @@
                 <img src="assets/images/header/logo.png" />
             </div>
             <div>
-                <h1>Library Management</h1>
+                <h1>BookShop Management</h1>
             </div>
         </div>
         <div class="right-content">
