--- a/src/app/client/components/client-list/client-list.component.scss
+++ b/src/app/client/components/client-list/client-list.component.scss
@@ -1,13 +1,15 @@
 @import 'tables.scss';
 @import 'colors.scss';
 
-$c1Width: 25%;
-$c2Width: 20%;
-$c3Width: 25%;
-$c4Width: 20%;
+$c1Width: 20%;
+$c2Width: 15%;
+$c3Width: 15%;
+$c4Width: 15%;
 $c5Width: 10%;
+$c6Width: 15%;
+$c7Width: 10%;
 
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $c7Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -39,6 +41,14 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
         }
         tbody td:nth-child(5),
         thead th:nth-child(5) {
+            @include thTdWidth($c5Width);
+        }
+        tbody td:nth-child(6),
+        thead th:nth-child(6) {
+            @include thTdWidth($c4Width);
+        }
+        tbody td:nth-child(7),
+        thead th:nth-child(7) {
             @include thTdWidth($c5Width);
         }
     }
