[PRODUCT LIST] Renaming #master

--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -5,7 +5,7 @@
                 <th>Nom</th>
                 <th>PU (Ar)</th>
                 <th>PV (Ar)</th>
-                <th>Ecart (Ar)</th>
+                <th>Benefice (Ar)</th>
                 <th>Quantité</th>
                 <th>Fournisseur</th>
                 <th>Type</th>
