Fix horizontal scroll #master

--- a/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
+++ b/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
@@ -6,7 +6,7 @@
         ></app-search-bar>
     </div>
 
-    <div class="filter">
+    <div class="filter" data-simplebar>
         <app-period-filter
             [periodFilter]="periodFilter"
             (filter)="onFilter($event)"
