--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -6,10 +6,9 @@
 $c1Width: 20%;
 $c2Width: 20%;
 $c3Width: 20%;
-$c4Width: 10%;
+$c4Width: 20%;
 $c5Width: 20%;
-$c6Width: 10%;
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -46,10 +45,6 @@ table {
     tbody td:nth-child(5),
     thead th:nth-child(5) {
         @include thTdWidth($c5Width);
-    }
-    tbody td:nth-child(6),
-    thead th:nth-child(56) {
-        @include thTdWidth($c6Width);
     }
     tbody td:nth-child(4) {
         padding: 0;
