--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -77,7 +77,7 @@ $authentication-title-color: #b71a73;
 $generic-form-title-color: #0357ef;
 $generic-form-placeholder-color: #999999;
 $generic-form-placeholder-border: #b4b4b4;
-$generic-form-border-focus: #00dc94;
+$generic-form-border-focus: #b71a73;
 $generic-form-border: #b4b4b4;
 $generic-form-border-disabled: #b4b4b4;
 $generic-form-error-background: #ffe9f2;
