--- a/src/app/sale/components/selectable-product-list/selectable-product-list.component.html
+++ b/src/app/sale/components/selectable-product-list/selectable-product-list.component.html
@@ -3,9 +3,9 @@
         <thead>
             <tr>
                 <th>Nom</th>
-                <th>Prix unitaire (Ar)</th>
-                <th>Prix de vente (Ar)</th>
-                <th>Quantité</th>
+                <th>PU (Ar)</th>
+                <th>PV (Ar)</th>
+                <th>Qté disponible</th>
                 <th></th>
             </tr>
         </thead>
@@ -17,7 +17,7 @@
                 <td>{{ product.name | titlecase }}</td>
                 <td>{{ product.costPrice | number: '1.0-0' }}</td>
                 <td>{{ product.sellingPrice | number: '1.0-0' }}</td>
-                <td [class.empty]="!product.quantity">{{ product.quantity || 'epuisé' }}</td>
+                <td [class.empty]="!product.quantity">{{ product.quantity | number: '1.0-0' || 'epuisé' }}</td>
                 <td class="actions">
                     <img src="/assets/images/add-btn.png" (click)="add.emit(product)" />
                 </td>
