--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -36,8 +36,8 @@
         <thead>
             <tr>
                 <th>Nom</th>
-                <th>Prix de vente (Ar)</th>
-                <th>Quantité</th>
+                <th>PV (Ar)</th>
+                <th>Qté commandée</th>
                 <th>Sous-total (Ar)</th>
                 <th></th>
             </tr>
@@ -47,7 +47,7 @@
                 <td [class.strikethrough]="saleItem.status !== 'ORDERED'">{{ saleItem.product.name | titlecase }}</td>
                 <td>{{ saleItem.product.sellingPrice | number: '1.0-0' }}</td>
                 <td>
-                    <input type="text" [disabled]="saleItem.status !== 'ORDERED'" [value]="editedQuantity" [value]="editedQuantity" (keyup)="onEditQty(saleItem, $event)" appDigitOnly>
+                    <app-incrementor [value]="saleItem.quantity" (changeValue)="onChangeQty(saleItem, $event)"></app-incrementor>
                 </td>
                 <td>{{ saleItem.product.sellingPrice * saleItem.quantity | number: '1.0-0' }}</td>
                 <td>
