Last commit #master

--- a/src/app/root/components/header/header.component.html
+++ b/src/app/root/components/header/header.component.html
@@ -18,7 +18,10 @@
                         </div>
                         <input type="checkbox" class="dd-input" id="test" />
                         <ul class="dd-menu">
-                            <li (click)="logOut()">Déconnexion</li>
+                            <li (click)="logOut()">
+                                <span>Déconnexion</span>
+                                <img src="assets/images/ico-signout.png">
+                            </li>
                         </ul>
                     </label>
                 </div>
