--- a/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
+++ b/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="detail">
-        <app-sale-detail *ngIf="currentSaleItems && currentSaleItems.length" [saleItems]="currentSaleItems"></app-sale-detail>
+        <router-outlet></router-outlet>
     </div>
 
     <footer>
