--- a/src/app/sale/components/consignation-form/consignation-form.component.scss
+++ b/src/app/sale/components/consignation-form/consignation-form.component.scss
@@ -27,7 +27,7 @@ form {
 
 .form-content {
     width: 100%;
-    padding: 4px;
+    padding: 4px 10px;
     border: solid 1px $light-gray;
     border-radius: 4px;
     margin: 5px 0;
