--- a/src/app/sale/containers/consignation-form-root/consignation-form-root.component.html
+++ b/src/app/sale/containers/consignation-form-root/consignation-form-root.component.html
@@ -2,9 +2,6 @@
     <app-consignation-form
         *ngIf="saleItem$ | async as saleItem"
         [saleItem]="saleItem$ | async"
-        [isEditing]="isEditing$ | async"
-        (edit)="onEdit($event)"
-        (save)="onSave($event)"
-        (cancel)="onCancelEdit(saleItem)">
+        (save)="onSave($event)">
     </app-consignation-form>
 </div>
