--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -22,8 +22,9 @@
         <div class="selected-product-container">
             <app-selected-product-list
                 [saleItems]="saleItems$ | async"
-                [clients]="clients$ | async"
+                [clientAutocompletionService]="clientAutocompletionService"
                 (save)="onSave($event)"
+                (remove)="onRemove($event)"
             ></app-selected-product-list>
         </div>
     </div>
