--- a/src/app/client/containers/client-root/client-root.component.html
+++ b/src/app/client/containers/client-root/client-root.component.html
@@ -36,7 +36,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Element enregistré avec success
+        Client enregistré avec success
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
@@ -50,7 +50,7 @@
         Confirmation
     </ng-template>
     <ng-template #modalBody>
-        Êtes-vous sûr de vouloir supprimer l'element?
+        Êtes-vous sûr de vouloir supprimer ce client?
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
