--- a/src/app/product/containers/product-list-root/product-list-root.component.html
+++ b/src/app/product/containers/product-list-root/product-list-root.component.html
@@ -36,7 +36,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Element enregistré avec succès
+        Produit enregistré avec succès
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
@@ -50,7 +50,7 @@
         Confirmation
     </ng-template>
     <ng-template #modalBody>
-        Êtes-vous sûr de vouloir supprimer l'element?
+        Êtes-vous sûr de vouloir supprimer ce produit?
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
