--- a/src/app/sale/containers/consignation-root/consignation-root.component.html
+++ b/src/app/sale/containers/consignation-root/consignation-root.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="list">
         <app-loader [isLoading]="consignationsLoading$ | async">
-            <app-consignation-list [consignations]="consignations$ | async" [currentSaleItem]="currentSaleItem$ | async" (view)="onViewDetail($event)" (edit)="onEdit($event)" (sort)="onSort($event)"></app-consignation-list>
+            <app-consignation-list [consignations]="consignations$ | async" [currentSaleItem]="currentSaleItem$ | async" (view)="onViewDetail($event)" (sort)="onSort($event)"></app-consignation-list>
         </app-loader>
     </div>
     <footer>
