--- a/src/app/supplier/containers/supplier-root/supplier-root.component.html
+++ b/src/app/supplier/containers/supplier-root/supplier-root.component.html
@@ -36,7 +36,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Element enregistré avec succès
+        Fournisseur enregistré avec succès
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
