--- a/src/app/user/containers/user-root/user-root.component.html
+++ b/src/app/user/containers/user-root/user-root.component.html
@@ -36,7 +36,7 @@
         Succès
     </ng-template>
     <ng-template #modalBody>
-        Element enregistré avec succès
+        Utilisateur enregistré avec succès
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="successfullSavingModal.close()">
@@ -50,7 +50,7 @@
         Confirmation
     </ng-template>
     <ng-template #modalBody>
-        Êtes-vous sûr de vouloir supprimer cet element?
+        Êtes-vous sûr de vouloir supprimer ce utilisateur?
     </ng-template>
     <ng-template #modalFooter>
         <button class="blue" (click)="deletionConfirmModal.close(); onConfirmDeletion()">
