--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -82,6 +82,7 @@ $generic-form-border: #b4b4b4;
 $generic-form-border-disabled: #b4b4b4;
 $generic-form-error-background: #ffe9f2;
 $generic-form-error-border: #fe74a2;
+$generic-form-input-disabled-background: #f9f9f9;
 //NG SELECT
 $ngselect-border-color: #b71a73;
 $ngselect-arrow-color: #b71a73;
